--- a/ProfileMatch.Components/Dialogs/UserNoteDialog.razor
+++ b/ProfileMatch.Components/Dialogs/UserNoteDialog.razor
@@ -1,3 +1,16 @@
-﻿<div>
-
-</div>
+﻿<MudDialog>
+    <DialogContent>
+        <MudGrid>
+            <MudItem xs="12" md="6">
+                <MudForm @ref="Form">
+                    <MudTextField T="string" @bind-Value="@TempDescription" Counter="200" MaxLength="200" HelperText="Max length" Immediate="true" Validation="@(new Func<string, IEnumerable<string>>(MaxCharacters))" Variant="Variant.Text" Lines="5" />
+                        <MudCheckBox @bind-Checked="IsDisplayed" Label="Display"/>
+                </MudForm>
+            </MudItem>
+        </MudGrid>
+    </DialogContent>
+    <DialogActions>
+      <MudButton OnClick="Cancel">@L["Cancel"]</MudButton>
+        <MudButton Color="Color.Error" OnClick="HandleSave">@L["Save"]</MudButton>
+    </DialogActions>
+</MudDialog>
