--- a/ProfileMatch.Components/User/UserCertList.razor
+++ b/ProfileMatch.Components/User/UserCertList.razor
@@ -2,7 +2,7 @@
 
 <MudText Typo="Typo.h6">@L["Certificates"]</MudText>
 
-<MudTable Items="@Elements" MultiSelection="true" @bind-SelectedItems="selectedItems1" Hover="@hover">
+<MudTable Items="@Elements" MultiSelection="true" @bind-SelectedItems="selectedItems1" Dense="true" Hover="true" Bordered="false" Striped="false">
     <HeaderContent>
         <MudTh>#</MudTh>
         <MudTh>@L["Employee"]</MudTh>
