--- a/ProfileMatch.Components/Admin/AdminCategoryList.razor
+++ b/ProfileMatch.Components/Admin/AdminCategoryList.razor
@@ -1,9 +1,6 @@
 ﻿<MudButton OnClick="(()=>CategoryCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
-<MudSwitch @bind-Checked="@hover" Color="Color.Primary">@L["Hover"]</MudSwitch>
-<MudSwitch @bind-Checked="@dense" Color="Color.Secondary">@L["Dense"]</MudSwitch>
-<MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">@L["Striped"]</MudSwitch>
-<MudSwitch @bind-Checked="@bordered" Color="Color.Warning">@L["Bordered"]</MudSwitch>
-<MudTable Items="@Categories" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Filter="new Func<Category,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
+
+<MudTable Items="@Categories" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<Category,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
         <MudText Typo="Typo.h6">@L["Categories"]</MudText>
         <MudSpacer />
