--- a/ProfileMatch.Components/Admin/AdminDepartmentList.razor
+++ b/ProfileMatch.Components/Admin/AdminDepartmentList.razor
@@ -1,9 +1,5 @@
 ﻿<MudButton OnClick="(()=>DepartmentCreate())" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">@L["Add New"]</MudButton>
-<MudSwitch @bind-Checked="@hover" Color="Color.Primary">@L["Hover"]</MudSwitch>
-<MudSwitch @bind-Checked="@dense" Color="Color.Secondary">@L["Dense"]</MudSwitch>
-<MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">@L["Striped"]</MudSwitch>
-<MudSwitch @bind-Checked="@bordered" Color="Color.Warning">@L["Bordered"]</MudSwitch>
-<MudTable Items="@Departments" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Filter="new Func<Department,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
+<MudTable Items="@Departments" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<Department,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
         <MudText Typo="Typo.h6">@L["Departments"]</MudText>
         <MudSpacer />
