--- a/ProfileMatch.Components/User/UserQuestionList.razor
+++ b/ProfileMatch.Components/User/UserQuestionList.razor
@@ -14,7 +14,7 @@ else
     <MudItem xs="12" md="6">
         <MudText Typo="Typo.body2">@L["Selected Values"]:  @(string.Join(", ", Options.Select(x=>$"\"{x}\""))) </MudText>
     </MudItem>
-    <MudTable Items="@(GetQuestions())" SortLabel=@L["Sort By"] Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Breakpoint="Breakpoint.Sm" Filter="new Func<Question,bool>(FilterFunc1)">
+    <MudTable Items="@(GetQuestions())" SortLabel=@L["Sort By"] Dense="true" Hover="true" Bordered="false" Striped="false" Breakpoint="Breakpoint.Sm" Filter="new Func<Question,bool>(FilterFunc1)">
         <ColGroup>
             <col />
             <col style="width: 60%;" />
@@ -46,13 +46,6 @@ else
                            InfoFormat="{first_item}-{last_item} / {all_items}" />
         </PagerContent>
     </MudTable>
-
-    <MudItem class="d-flex flex-wrap mt-4">
-        <MudSwitch @bind-Checked="@hover" Color="Color.Primary">@L["Hover"]</MudSwitch>
-        <MudSwitch @bind-Checked="@dense" Color="Color.Secondary">@L["Dense"]</MudSwitch>
-        <MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">@L["Striped"]</MudSwitch>
-        <MudSwitch @bind-Checked="@bordered" Color="Color.Warning">@L["Bordered"]</MudSwitch>
-    </MudItem>
 }
 <style>
     .mud-tabs-panels {
