--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,7 +4,14 @@
 @{
     ViewData["Title"] = "Log in";
 }
-
+<style>
+    body {
+  /*      background-color: #32333d;*/
+    }
+    navbar {
+        background-color: #27272f;
+    }
+</style>
 <h1>@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4 mx-auto">
@@ -47,6 +54,7 @@
         </form>
     </div>
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
