--- a/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
+++ b/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
@@ -10,11 +10,11 @@
     <title>@ViewData["Title"] - ProfileMatch</title>
     <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/Identity/css/site.css" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark navbar-toggleable-sm bg-dark border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" href="~/">Profile Match</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -45,11 +45,6 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="footer border-top text-muted">
-        <div class="container">
-            &copy; 2021 - Profile Match @*- <a asp-area="" asp-page="Privacy">Privacy</a>*@
-        </div>
-    </footer>
     <script src="~/Identity/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Identity/js/site.js" asp-append-version="true"></script>
