Updated qusetion display dialogs

--- a/ProfileMatch.Components/Dialogs/AdminQuestionDisplay.razor
+++ b/ProfileMatch.Components/Dialogs/AdminQuestionDisplay.razor
@@ -1,8 +1,7 @@
 ﻿<MudDialog>
     <DialogContent>
-        <MudItem Class="pt-8"></MudItem>
-        <MudText Typo="Typo.h6">@Q.Category.Name:</MudText>
-        <MudText Typo="Typo.h6">@Q.Name</MudText>
+        <MudText Typo="Typo.h6">@Q.Category.Name: @Q.Name</MudText>
+       
 
         <MudTabs Outlined="true"
                  Position="Position.Top"
