--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
                         <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs">
-                        <MudText Typo="Typo.h6" Class="ml-4">@L["People Match"]</MudText>
+                        <MudText Typo="Typo.h6" Class="ml-4">Profile Match</MudText>
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
                         <MudText Typo="Typo.subtitle2">@L["People Match"]</MudText>
