--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,6 +1,11 @@
 ﻿@page
+@using Microsoft.AspNetCore.Localization
 @model LoginModel
-
+@{
+    
+    var requestCultureFeature = HttpContext.Features.Get<IRequestCultureFeature>();
+    var RequestCulture = requestCultureFeature.RequestCulture;
+}
 
  <head>
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -52,25 +57,73 @@ body {
 
 </style>
 </head>
-<body class="text-center" >
-  <form class="form-signin" id="account" method="post">
-    <h1 class="h3 mb-3">Please sign in</h1>
+<body  >
     
-    <input type="email" id="Input.Email" class="form-control" placeholder="Email address"  asp-for="Input.Email" required autofocus>
+  <form class="form-signin text-center" id="account" method="post" >
+       <img src="https://i.ibb.co/Gk1cvZK/logo.png" alt="logo" border="0">
+       <br/>
+       <br/>
+    <h1 class="h3 mb-3">Proszę się zalogować</h1>
    
-    <input type="password" id="Input.Password" class="form-control" placeholder="Password" asp-for="Input.Password" required>
+    <input type="email" id="Input.Email" class="form-control" placeholder="Email"  asp-for="Input.Email" required autofocus>   
+    <input type="password" id="Input.Password" class="form-control" placeholder="Hasło" asp-for="Input.Password" required>   
+    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="checkbox mb-3">
       <label>
-        <input type="checkbox" value="remember-me"> Remember me
+        <input type="checkbox" value="remember-me"> Zapamiętaj
       </label>
     </div>
     <div class="form-group">
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <div class="d-grid gap-3">
+  <button class="btn btn-primary btn-lg" type="submit">Zaloguj</button>
     </div>
-    <p class="mt-5 mb-3 text-muted">&copy; Karol Pluciński, Łukasz Pietrzak, Paweł Przytuła</p>
-  </form>
+    </div>
+    </form>
+    <div class="text-center">
+    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Modal">Pomoc</button>
+    </div>
+    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true" >
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+       <h5 class="modal-title" id="ModalLabel">Pomoc</h5>       
+      </div>
+      <div class="modal-body">
+          <form>
+  <div class="form-group row">
+    <label for="staticEmail" class="col-sm-2 col-form-label">Email:</label>
+    <div class="col-sm-10">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="admin@profilematch.com">
+    </div>
+    </div>
+    <br />
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Wybierz temat:</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>1. Zapomniałeś loginu lub hasła</option>
+      <option>2. Nie posiadasz konta</option>
+      <option>3. Nie możesz się zalogować</option>
+      <option>4. xxx</option>
+      <option>5. xxx</option>
+    </select>
+    <br />
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Opisz swój problem:</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+</form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
+        <button class="btn btn-primary" type="submit">Wyślij</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </body>
-
-
-<
+<p>
+<p class="mt-5 mb-5 text-muted text-center">&copy; 2022 Karol Pluciński, Łukasz Pietrzak & Paweł Przytuła</p>
 
