--- a/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using ProfileMatch.Web.Areas.Identity.Pages
 @using ProfileMatch.Models.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ProfileMatch
