--- a/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -4,3 +4,6 @@
 @using ProfileMatch.Models.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ProfileMatch
+@addTagHelper *, ProfileMatch.Web.Pages.Shared.ViewComponents
+
+@using System.Globalization
