manager table update

--- a/ProfileMatch.Components/User/UserCategoryList.razor
+++ b/ProfileMatch.Components/User/UserCategoryList.razor
@@ -12,7 +12,7 @@ else
     <MudCard>
         <MudCardHeader>
             <CardHeaderContent>
-                <textfield Typo="Typo.h6">My Categories</textfield>
+                <MudText  Typo="Typo.h6">@L["My Categories"]</MudText>
             </CardHeaderContent>
         </MudCardHeader>
         <MudCardContent>
