--- a/ProfileMatch.Components/Manager/ManagerTestTable.razor
+++ b/ProfileMatch.Components/Manager/ManagerTestTable.razor
@@ -7,15 +7,6 @@ else
 
     <MudItem Class="d-flex">
         <MudItem xs="12" md="5">
-            <MudSelect T="string" Label=@L["Select Users"] MultiSelection="true" OffsetY="true" @bind-SelectedValues="Ppl">
-                @foreach (var p in users)
-                {
-                    <MudSelectItem T="string" Value="@p.FullName" />
-                }
-            </MudSelect>
-        </MudItem>
-        <MudSpacer />
-        <MudItem xs="12" md="5">
             <MudSelect T="string" Label=@L["Select Category"] MultiSelection="true" OffsetY="true" @bind-SelectedValues="Cats">
                 @foreach (var cat in categories)
                 {
@@ -26,54 +17,47 @@ else
     </MudItem>
     <MudText Typo="Typo.body2">@L["Selected Categories"]:  @(string.Join(", ", Cats.Select(x=>$"\"{x}\""))) </MudText>
 
-    <MudTable GroupHeaderStyle="background-color:var(--mud-palette-background-grey)"
+    <MudDataGrid
               Height="500px"
               FixedHeader="true"
-              GroupFooterClass="mb-4"
-              GroupBy="@_groupDefinition"
               Items="@GetCategoriesAndQuestions()"
-              SortLabel=@L["Sort By"]
-              Dense="true" Hover="true" Bordered="false" Striped="false"
-              Breakpoint="Breakpoint.Sm"
-              Filter="new Func<QuestionUserLevelVM, bool>(FilterFunc1)">
-        <ColGroup>
-            <col />
-            <col style="width: 60%;" />
-            <col />
-            <col />
-        </ColGroup>
+              Dense="true"
+              Hover="true"
+              Bordered="false"
+              Striped="false"
+              Sortable="true"
+              Filterable="true"
+              QuickFilter="@quickFilter"
+              Breakpoint="Breakpoint.Sm">
+        
         <ToolBarContent>
             <MudText Typo="Typo.h6">@L["Questions Table"]</MudText>
             <MudSpacer />
-            <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+            <MudTextField
+            @bind-Value="searchString"
+            Placeholder=@L["Search"] 
+            Adornment="Adornment.Start" 
+            Immediate="true" 
+            AdornmentIcon="@Icons.Material.Filled.Search"
+            IconSize="Size.Medium"
+            Class="mt-0"></MudTextField>
         </ToolBarContent>
-        <HeaderContent>
-            <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.QuestionName)">@L["Question"]</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.Level)">@L["Level"]</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.FullName)">@L["Full Name"]</MudTableSortLabel></MudTh>
-            <MudTh>@L["Is a need"]</MudTh>
-        </HeaderContent>
-        <GroupHeaderTemplate>
-            <MudTh Class="mud-table-cell-custom-group" colspan="5">@($"{context.GroupName}: {context.Key}")</MudTh>
-        </GroupHeaderTemplate>
-        <RowTemplate>
-            <MudTd DataLabel=@L["Question"]><MudButton OnClick="@(()=>QuestionDisplay(context.QuestionId))" Color="Color.Info" Variant="Variant.Outlined">@context.QuestionName</MudButton></MudTd>
-            <MudTd DataLabel=@L["Level"]>@context.Level</MudTd>
-            <MudTd DataLabel=@L["Full Name"]>@context.FullName</MudTd>
-            <MudTd DataLabel=@L["Is a need"]>@context.CategoryId</MudTd>
-        </RowTemplate>
-        <GroupFooterTemplate>
-            <MudTh Style="font-weight: 500;">Total: @context.Items.Sum((e) => e.Level)</MudTh>
-        </GroupFooterTemplate>
+        <Columns>
+            <Column T="QuestionUserLevelVM" Field="CategoryName" Title="Category"/>
+            <Column T="QuestionUserLevelVM" Field="QuestionName" Title="Question"/>
+            <Column T="QuestionUserLevelVM" Field="Description" Title="Description"/>
+            <Column T="QuestionUserLevelVM" Field="Level" Title="Level"/>
+            <Column T="QuestionUserLevelVM" Field="FullName" Title="Full Name"/>
+        </Columns>
         <PagerContent>
-            <MudTablePager HidePagination="true" HorizontalAlignment="HorizontalAlignment.Right" Class="pl-2 pr-2"
+            <MudTablePager HidePagination="false" HorizontalAlignment="HorizontalAlignment.Right" Class="pl-2 pr-2"
                            PageSizeOptions="new int[] { 5, 10, 25, 50, 100 }" RowsPerPageString=@L["Items per page"]
                            InfoFormat="{first_item}-{last_item} / {all_items}" />
         </PagerContent>
-    </MudTable>
+    </MudDataGrid>
 }
 <style>
     .mud-tabs-panels {
         min-height: 200px !important;
     }
-</style>
+</style>    
