--- a/ProfileMatch.Components/User/UserNoteList.razor
+++ b/ProfileMatch.Components/User/UserNoteList.razor
@@ -1,6 +1,6 @@
 ﻿<MudTable Items="@UserNotesVM" T="UserNoteVM" Dense="true" Hover="true" Bordered="false" Striped="false" Filter="new Func<UserNoteVM,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">@L["Notes"]</MudText>
+        <MudText Typo="Typo.h6">@L["Open questions"]</MudText>
         <MudSpacer />
         <MudTextField @bind-Value="searchString1" Placeholder=@L["Search"] Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
@@ -21,7 +21,7 @@
         <MudTd DataLabel=@L["Description"]>@context.NoteDescription</MudTd>
         <MudTd DataLabel=@L["Description"]>@context.UserDescription</MudTd>
         <MudTd DataLabel=@L["Edit"]>
-            <MudButton OnClick="((e)=>UserNoteUpdate(context))" Color="Color.Tertiary">@L["Edit Note"]</MudButton>
+            <MudButton OnClick="((e)=>UserNoteUpdate(context))" Color="Color.Tertiary">@L["Edit note"]</MudButton>
         </MudTd>
     </RowTemplate>
     <PagerContent>
