--- a/ProfileMatch.Sites/AdminDashboard.razor
+++ b/ProfileMatch.Sites/AdminDashboard.razor
@@ -10,8 +10,8 @@
                 <AdminDepartmentList />
             </MudTabPanel>
             <MudTabPanel Text=@L["Categories"]><AdminCategoryList /></MudTabPanel>
-            <MudTabPanel Text=@L["Questions"]><AdminQuestionList /></MudTabPanel>
-            <MudTabPanel Text=@L["Notes"]><AdminNoteList /></MudTabPanel>
+            <MudTabPanel Text=@L["Open questions"]><AdminQuestionList /></MudTabPanel>
+            <MudTabPanel Text=@L["Closed questions"]><AdminNoteList /></MudTabPanel>
         </MudTabs>
     </Authorized>
     <NotAuthorized>
