Update NavigationManager MudFab

--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -53,7 +53,7 @@
                             <MudSpacer />
                             @if (NavigationManager.Uri.Contains("/user/")&&!NavigationManager.Uri.Contains("/user/dashboard"))
                             {
-                                <MudFab Icon="@Icons.Filled.ArrowBackIosNew" OnClick="GoBack" />
+                                <MudFab Color="Color.Primary" Icon="@Icons.Filled.ArrowBackIosNew" OnClick="GoBack" />
                             }
                         </MudToolBar>
                     </MudHidden>
