--- a/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProfileMatch.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,159 +4,81 @@
 @using ProfileMatch.Services
 @model LoginModel
 @inject IStringLocalizer<LanguageService> L
-@{
-    
-    var requestCultureFeature = HttpContext.Features.Get<IRequestCultureFeature>();
-    var RequestCulture = requestCultureFeature.RequestCulture;
-}
 
-
- <head>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<style>
-    html,
-body {
-  height: 100%;
-}
-
-body {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
-
-.form-signin {
-  width: 100%;
-  max-width: 330px;
-  padding: 15px;
-  margin: auto;
-}
-.form-signin .checkbox {
-  font-weight: 400;
-}
-.form-signin .form-control {
-  position: relative;
-  box-sizing: border-box;
-  height: auto;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.dark-mode {
-  background-color: #32333d;
-  color: white;
-}
-</style>
-</head>
-<body class="text-center" >
-
+<body class="text-center">
     <div class="container d-flex p-3 mx-auto w-100 flex-column">
-    <header class="mb-auto">
-    
-      <nav class="nav justify-content-center float-md-end">
+        <header class="mb-auto">
+        </header>
 
-        <div class="nav-link">
-           @await Component.InvokeAsync("CultureSwitch")
-          <div class="form-check form-switch" onclick="myFunction()">
-            <input type="checkbox" class="form-check-input" id="darkSwitch">
-            <label class="custom-control-label" for="darkSwitch" onclick="myFunction()">Dark Mode</label>
-          </div>
-          
-
+    </div>
+    <form class="form-signin" id="account" method="post">
+        <div class="logo">
+            <img src="https://i.ibb.co/Gk1cvZK/logo.png" alt="logo" border="0">
         </div>
-      </nav>
-    </header>
+        <h1 class="h3 mb-3">@L["Proszę się zalogować"]</h1>
 
- </div> 
-  <form class="form-signin" id="account" method="post" >
-       <img src="https://i.ibb.co/Gk1cvZK/logo.png" alt="logo" border="0">
-       <br/>
-       <br/>
-    <h1 class="h3 mb-3">@L["Proszę się zalogować"]</h1>
-   
-    <input type="email" id="Input.Email" class="form-control" placeholder="Email"  asp-for="Input.Email" required autofocus>   
-    <input type="password" id="Input.Password" class="form-control" placeholder=@L["Hasło"] asp-for="Input.Password" required>   
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> @L["Zapamiętaj"]
-      </label>
-    </div>
-    <div class="form-group">
-    <div class="d-grid gap-3">
-  <button class="btn btn-primary btn-lg" type="submit">@L["Zaloguj"]</button>
-    </div>
-    </div>
-   </form>
+        <input type="email" id="Input.Email" autocomplete="current-email" class="form-control" placeholder="Email" asp-for="Input.Email" required autofocus>
+        <input type="password" id="Input.Password" autocomplete="current-password" class="form-control" placeholder=@L["Hasło"] asp-for="Input.Password" required>
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me"> @L["Zapamiętaj"]
+            </label>
+        </div>
+        <div class="form-group">
+            <div class="d-grid gap-3">
+                <button class="btn btn-primary btn-lg" type="submit">@L["Zaloguj"]</button>
+            </div>
+        </div>
+    </form>
 
     <div class="text-center">
-    <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Modal">Pomoc</button>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#Modal">Pomoc</button>
     </div>
-    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true" >
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-       <h5 class="modal-title" id="ModalLabel">Pomoc</h5>       
-      </div>
-      <div class="modal-body">
-          <form>
-  <div class="form-group row">
-    <label for="staticEmail" class="col-sm-2 col-form-label">Email:</label>
-    <div class="col-sm-10">
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="admin@profilematch.com">
+    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="ModalLabel">Pomoc</h5>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="staticEmail" class="col-sm-2 col-form-label">Email:</label>
+                            <div class="col-sm-10">
+                                <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="admin@profilematch.com">
+                            </div>
+                        </div>
+                        <br />
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">Wybierz temat:</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                                <option>1. Zapomniałeś loginu lub hasła</option>
+                                <option>2. Nie posiadasz konta</option>
+                                <option>3. Nie możesz się zalogować</option>
+                                <option>4. xxx</option>
+                                <option>5. xxx</option>
+                            </select>
+                            <br />
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Opisz swój problem:</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
+                    <button class="btn btn-primary" type="submit">Wyślij</button>
+                </div>
+            </div>
+        </div>
     </div>
+    <div>
+        <p class="mt-5 mb-5 text-muted text-center">&copy; 2022 Karol Pluciński, Łukasz Pietrzak & Paweł Przytuła</p>
     </div>
-    <br />
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Wybierz temat:</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>1. Zapomniałeś loginu lub hasła</option>
-      <option>2. Nie posiadasz konta</option>
-      <option>3. Nie możesz się zalogować</option>
-      <option>4. xxx</option>
-      <option>5. xxx</option>
-    </select>
-    <br />
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Opisz swój problem:</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-</form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-        <button class="btn btn-primary" type="submit">Wyślij</button>
-      </div>
-    </div>
-  </div>
-</div>
-   <script>
-    function myFunction() {
-  var element = document.body;
-  element.classList.toggle("dark-mode");
-} 
-</script>
 </body>
-<p>
-<p class="mt-5 mb-5 text-muted text-center">&copy; 2022 Karol Pluciński, Łukasz Pietrzak & Paweł Przytuła</p>
+
 
 
 
