--- a/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
+++ b/ProfileMatch.Web/Pages/Shared/_Layout.cshtml
@@ -9,14 +9,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Profile Match</title>
     <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="~/Identity/css/site.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/login.css" />
+    <link rel="stylesheet" href="~/css/theme.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
+
+
+        <nav class="navbar navbar-expand-sm fixed-top ml-auto navbar-toggleable-sm box-shadow mb-3">
+
             <div class="container">
-        
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,24 +37,33 @@
                     else
                     {
                         throw new InvalidOperationException("The default Identity UI layout requires a partial view '_LoginPartial' " +
-                            "usually located at '/Pages/_LoginPartial' or at '/Views/Shared/_LoginPartial' to work. Based on your configuration " +
-                            $"we have looked at it in the following locations: {System.Environment.NewLine}{string.Join(System.Environment.NewLine, result.SearchedLocations)}.");
+                        "usually located at '/Pages/_LoginPartial' or at '/Views/Shared/_LoginPartial' to work. Based on your configuration " +
+                        $"we have looked at it in the following locations: {System.Environment.NewLine}{string.Join(System.Environment.NewLine, result.SearchedLocations)}.");
                     }
                 </div>
             </div>
+             <div class="nav-link">
+                    <partial name="_Culture" />
+                </div>
+                <div class="nav-link">
+                    <div class="form-check form-switch" onclick="changeTheme()">
+                        <input type="checkbox" class="form-check-input" id="darkSwitch">
+                        <label class="custom-control-label" for="darkSwitch" onclick="changeTheme()">Dark Mode</label>
+                    </div>
+                </div>
         </nav>
     </header>
 
     <div class="container">
         <main role="main" class="pb-3">
-            
+
             @RenderBody()
         </main>
     </div>
     <script src="~/Identity/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Identity/js/site.js" asp-append-version="true"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="~/js/theme.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
