--- a/ProfileMatch.Web/Pages/_ViewImports.cshtml
+++ b/ProfileMatch.Web/Pages/_ViewImports.cshtml
@@ -1,6 +1,13 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using ProfileMatch.Web.Areas.Identity
 @using ProfileMatch.Models.Models
-
-ProfileMatch.Pages
+@using Microsoft.Extensions.Localization
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Options
+@using ProfileMatch.Services
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Hosting
+@using Microsoft.AspNetCore.Mvc.ViewEngines
+@using ProfileMatch.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
