updated class and component namings

--- a/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
+++ b/ProfileMatch.Components/Manager/ManagerClosedQuestions.razor
@@ -18,7 +18,7 @@ else
               Striped="false"
               Sortable="true"
               Filterable="true"
-              QuickFilter="@quickFilter"
+              QuickFilter="@QuickFilter"
               Breakpoint="Breakpoint.Sm">
         
         <ToolBarContent>
