--- a/ProfileMatch.Sites/ManagerDashboard.razor
+++ b/ProfileMatch.Sites/ManagerDashboard.razor
@@ -3,7 +3,7 @@
         <Authorized>
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["Manager Dashboard"]</MudText>
             <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
-                <MudTabPanel Text=@L["Compare"]><ManagerTestTable /></MudTabPanel>
+                <MudTabPanel Text=@L["Compare"]><ManagerClosedQuestions /></MudTabPanel>
             </MudTabs>
         </Authorized>
         <NotAuthorized>
