--- a/ProfileMatch.Sites/UserDashboard.razor
+++ b/ProfileMatch.Sites/UserDashboard.razor
@@ -5,8 +5,8 @@
             <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">@L["User Dashboard"]</MudText>
             <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
                 <MudTabPanel Text=@L["Account"] Icon="@Icons.Filled.PersonOutline"><UserAccount /></MudTabPanel>
-                <MudTabPanel Text=@L["Open questions"] Icon="@Icons.Filled.FactCheck"><UserNoteList /></MudTabPanel>
-                <MudTabPanel Text=@L["Closed questions"] Icon="@Icons.Filled.FactCheck"><UserQuestionList /></MudTabPanel>
+                <MudTabPanel Text=@L["Open questions"] Icon="@Icons.Filled.FactCheck"><UserOpenQuestions /></MudTabPanel>
+                <MudTabPanel Text=@L["Closed questions"] Icon="@Icons.Filled.FactCheck"><UserClosedQuestions /></MudTabPanel>
                 <MudTabPanel Text=@L["Certificates"] Icon="@Icons.Filled.TableChart"><UserCertList /></MudTabPanel>
             </MudTabs>
         </Authorized>
