Update dark theme to dialog in login page

--- a/ProfileMatch.Web/wwwroot/css/login.css
+++ b/ProfileMatch.Web/wwwroot/css/login.css
@@ -47,11 +47,19 @@ body {
         border-top-right-radius: 0;
     }
 
-.dark-mode {
+
+
+.dark-mode  {
     background-color: #32333d;
     color: white;
 }
-
+ .dark-mode .modal-content {
+     background-color: #32333d;
+     color: white;
+    }
+    .dark-mode .form-control-plaintext {
+        color: white;
+    }
 .logo {
     margin-bottom: 10px;
 }
