--- a/ProfileMatch.Components/User/UserOpenQuestions.razor
+++ b/ProfileMatch.Components/User/UserOpenQuestions.razor
@@ -19,7 +19,7 @@
     <RowTemplate>
         <MudTd DataLabel=@L["Name"]>@context.NoteName</MudTd>
         <MudTd DataLabel=@L["Description"]>@context.NoteDescription</MudTd>
-        <MudTd DataLabel=@L["Description"]>@context.UserDescription</MudTd>
+        <MudTd DataLabel=@L["Answer"]>@context.UserDescription</MudTd>
         <MudTd DataLabel=@L["Edit"]>
             <MudButton OnClick="((e)=>UserNoteUpdate(context))" Color="Color.Tertiary">@L["Edit note"]</MudButton>
         </MudTd>
